inital implementation of GET /projects with cache
