# pkg/swagger/swagger.yaml
@@ -170,7 +170,7 @@ paths:
 
   /projects:
     get:
-      summary: get filer resources for all existing project.
+      summary: get filer resources of all projects.
 
       consumes:
         - application/json
@@ -471,9 +471,11 @@ definitions:
 
   responseBodyProjects:
     description: JSON list containing a list of project resources.
-    type: array
-    items:
-      $ref: '#/definitions/responseBodyProjectResource'
+    properties:
+      projects:
+        type: array
+        items:
+          $ref: '#/definitions/responseBodyProjectResource'
 
   responseBodyProjectMembers:
     description: JSON object containing current list of members implemented on the filer.
